recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {	
	 if (length == 75){
	 	return
	 }
	avance(steps)
	gauche(angle)
	length = length+increment
	
}
